Reposition certain dependencies as devdependencies

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "author": "Eric Nam",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3",
+    "express": "^4.16.3"
+  },
+  "devDependencies": {
     "mocha": "^5.2.0",
     "nodemon": "^1.17.5"
   }
